# BuildingEmbeddedSystemsOnLinuxBook

./: LICENSE  README.md
Common/: ByteView.h
SetupChapter/: CMakeLists.txt  LICENSE  jitter_test.cpp  mlock_demo_program.cpp  rt_shield_setup.sh  rt_shield_teardown.sh  run_rt.sh
TypeErasureChapter/: AnyNMEAMessage.h  CMakeLists.txt  ImmutableBuffer.cpp  ImmutableBuffer.h  LICENSE  MutableBuffer.cpp  MutableBuffer.h  NMEACommon.cpp  NMEACommon.h  NMEAExtractionStream.cpp  NMEAExtractionStream.h  NMEAInsertionStream.cpp  NMEAInsertionStream.h  README.md  Register32Bits.h  main.cpp  tests.cpp  traits.h  typeErasureDemo.cpp
